--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               <h4 class="text-xs md:text-base"><strong>Intern/Geologist</strong></h4>
             </div>
             <a class="rounded-md border border-dashed border-gray-500 px-2 py-1 text-sm transition-all hover:bg-gray-100"
-              download href="/muntaser-muttaq-resume.pdf" target="_blank">
+              download href="/yasin-mahmud-ifti-cv.pdf" target="_blank">
               <i class="bi bi-download mr-2"></i>Download</a>
           </div>
         </div>
