twitter icon update

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                   target="_blank">https://www.facebook.com/alphamale.ifti/</a>
               </div>
               <div class="space-x-1">
-                <i class="bi bi-facebook"></i>
+                <i class="bi bi-twitter-x"></i>
                 <a class="transition-all hover:underline text-xs" href="https://twitter.com/y2ifti/"
                   target="_blank">https://twitter.com/y2ifti/</a>
               </div>
